Fix fullcalendar css to make calendar more readable...

--- a/public/styles/components/fullcalendar/fullcalendar.css
+++ b/public/styles/components/fullcalendar/fullcalendar.css
@@ -372,8 +372,15 @@ hr.fc-divider {
 	border-collapse: collapse;
 	border-spacing: 0;
 	font-size: 1em; /* normalize cross-browser */
+	margin: 0;
 }
-
+.fc thead {
+	border-bottom: 0;
+}
+.fc table tbody tr {
+	background-color: white;
+	border: 0;
+}
 .fc th {
 	text-align: center;
 }
@@ -483,7 +490,7 @@ temporary rendered events).
 .fc-row .fc-helper-skeleton td {
 	/* see-through to the background below */
 	background: none; /* in case <td>s are globally styled */
-	border-color: transparent;
+	/*border-color: transparent;
 
 	/* don't put a border between events and/or the day number */
 	border-bottom: 0;
